Fixed Label Position on Text Align change

--- a/src/scss/element/form/_field.scss
+++ b/src/scss/element/form/_field.scss
@@ -50,6 +50,17 @@
     color: $danger;
     font-weight: $semi-bold;
   }
+
+  &.has-text-center,
+  &.has-text-right {
+    > label {
+      padding-left: 0;
+    }
+  }
+
+  &.has-text-right > label {
+    padding-right: get-em-spacer();
+  }
 }
 
 
