--- a/src/scss/element/form/_input.scss
+++ b/src/scss/element/form/_input.scss
@@ -49,6 +49,7 @@
   > input,
   > textarea {
     font-family: inherit;
+    font-weight: inherit;
     color: inherit;
     text-align: left;
     outline: 0;
